WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273106
REGRESSION (
269108@main
): Same-origin XSLT document() loads fail
https://bugs.webkit.org/show_bug.cgi?id=273106
Summary
REGRESSION (269108@main): Same-origin XSLT document() loads fail
David Kilzer (:ddkilzer)
Reported
2024-04-22 19:59:50 PDT
Use XMLDocumentParserScope in WebCore::docLoaderFunc. In
Bug 259235
, shouldAllowExternalLoad() was returning because there was no XMLDocumentParserScope::currentCachedResourceLoader set, not because the origin didn't match.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-22 20:00:24 PDT
<
rdar://problem/126897034
>
David Kilzer (:ddkilzer)
Comment 2
2024-04-22 20:16:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27613
EWS
Comment 3
2024-04-24 08:22:49 PDT
Committed
277924@main
(66338748251c): <
https://commits.webkit.org/277924@main
> Reviewed commits have been landed. Closing PR #27613 and removing active labels.
EWS
Comment 4
2024-04-26 22:26:17 PDT
Committed
272448.966@safari-7618-branch
(d7406b8819d0): <
https://commits.webkit.org/272448.966@safari-7618-branch
> Reviewed commits have been landed. Closing PR #1244 and removing active labels.
EWS
Comment 5
2024-05-08 13:27:20 PDT
Committed
259548.986@safari-7615.7.1.10-branch
(32777eaa7786): <
https://commits.webkit.org/259548.986@safari-7615.7.1.10-branch
> Reviewed commits have been landed. Closing PR #1262 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug