Cherry-pick 277924@main (66338748251c). rdar://126897034

REGRESSION (269108@main): Same-origin XSLT document() loads fail
    https://bugs.webkit.org/show_bug.cgi?id=273106
    <rdar://126897034>

    Reviewed by Alex Christensen.

    Prior to this change, all external entity loads using docLoaderFunc() in
    XSLTProcessorLibxslt.cpp would fail in shouldAllowExternalLoad() because
    XMLDocumentParserScope::currentCachedResourceLoader was nullptr.  This
    caused both cross-origin loads and same-origin loads to fail.

    The fix is to make use of XMLDocumentParserScope in docLoaderFunc() to
    set XMLDocumentParserScope::currentCachedResourceLoader so that the
    same-origin policy is applied.

    We keep the check added to shouldAllowExternalLoad() from 269108@main in
    case a load is initiated without using XMLDocumentParserScope, and this
    change adds a Debug assert to catch those cases before the load fails.

    Tests:
        http/tests/security/xss-ALLOWED-xsl-external-entity-xslt-docloader.html
        http/tests/security/xss-DENIED-xsl-external-entity-xslt-docloader.html

    * LayoutTests/http/tests/security/resources/xss-ALLOWED-xsl-external-entity-xslt-docloader.py: Add.
    * LayoutTests/http/tests/security/resources/xss-ALLOWED-xsl-external-entity-xslt-docloader.svg: Copy from LayoutTests/http/tests/security/resources/xslt-external-entity.svg.
    * LayoutTests/http/tests/security/resources/xss-ALLOWED-xsl-external-entity-xslt-docloader.xml: Add.
    * LayoutTests/http/tests/security/resources/xss-DENIED-xsl-external-entity-xslt-docloader.py: Rename from LayoutTests/http/tests/security/resources/xslt2.py.
    * LayoutTests/http/tests/security/resources/xss-DENIED-xsl-external-entity-xslt-docloader.svg: Rename from LayoutTests/http/tests/security/resources/xslt-external-entity.svg.
    * LayoutTests/http/tests/security/xss-ALLOWED-xsl-external-entity-xslt-docloader-expected.txt: Add.
    * LayoutTests/http/tests/security/xss-ALLOWED-xsl-external-entity-xslt-docloader.html: Copy from LayoutTests/http/tests/security/xslt-external-entity.html.
    * LayoutTests/http/tests/security/xss-DENIED-xsl-external-entity-xslt-docloader-expected.txt: Rename from LayoutTests/http/tests/security/xslt-external-entity-expected.txt.
    - Update results with denied console messages.  This change is the
      result of the bug fix.
    * LayoutTests/http/tests/security/xss-DENIED-xsl-external-entity-xslt-docloader.html: Rename from LayoutTests/http/tests/security/xslt-external-entity.html.
    - Add xss-ALLOWED-xsl-external-entity-xslt-docloader.html to test the
      same-origin case.  This test failed before this fix.
    - Rename http/tests/security/xslt-external-entity.html to
      xss-DENIED-xsl-external-entity-xslt-docloader.html to match similar
      test cases.
    * LayoutTests/platform/mac-monterey/http/tests/security/xss-DENIED-xsl-external-entity-xslt-docloader-expected.txt: Rename from LayoutTests/platform/mac-monterey/http/tests/security/xslt-external-entity-expected.txt.
    - Update results with denied console messages.  This change is the
      result of the bug fix.

    * Source/WebCore/xml/XSLTProcessorLibxslt.cpp:
    (WebCore::docLoaderFunc):
    - Make use of WebCore::XMLDocumentParserScope to fix the bug.

    * Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
    (WebCore::shouldAllowExternalLoad):
    - Add Debug assert to catch failures where XMLDocumentParserScope is
      missing, or a non-WebKit, in-process libxml2 load occurs.

    Canonical link: https://commits.webkit.org/277924@main

Canonical link: https://commits.webkit.org/272448.966@safari-7618-branch